@@ -18,7 +18,8 @@ changes on close-after-QUIT (`Microsoft Outlook bug' workaround), with an
 option to restore the previous, correct, behaviour. Added support for
 intelligent filenames in maildirs (maildir-evaluate-filename config option) to
 avoid calls to stat(). New authenticator auth_gdbm added. Fixed bug with PID
-file handling after HUP signals.
+file handling after HUP signals. Added lowercase options for POP3 USER command
+and maildir database lookups.
 
 1.5.3
 
